Cleaned up complog reference

--- a/src/HtmlGenerator.Tests/HtmlGenerator.Tests.csproj
+++ b/src/HtmlGenerator.Tests/HtmlGenerator.Tests.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <NoWarn>$(NoWarn);VSTHRD002;VSTHRD103</NoWarn>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
