--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,7 +42,8 @@
                 "program": "${workspaceFolder}/src/HtmlGenerator/bin/Debug/net8.0/HtmlGenerator"
             },
             "cwd": "${workspaceFolder}",
-            "args": ["../complog/build.complog", "/out:testSite", "/force", "/projectName:complog" ]
+            // "args": ["../complog/build.complog", "/out:testSite", "/force", "/projectName:complog" ]
+            "args": ["/mnt/c/Users/jaredpar/temp/console/msbuild.complog", "/out:testSite", "/force", "/projectName:complog" ]
             // "cwd": "${workspaceFolder}/src/SourceIndexServer/bin/Debug/net6.0",
         }
     ]
