--- a/src/SourceIndexServer/SourceIndexServer.csproj
+++ b/src/SourceIndexServer/SourceIndexServer.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Basic.Azure.Pipelines\Basic.Azure.Pipelines.csproj" />
   </ItemGroup>
 
   <ItemGroup>
