--- a/src/SourceIndexServer/SourceIndexServer.csproj
+++ b/src/SourceIndexServer/SourceIndexServer.csproj
@@ -14,7 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="GitHubJwt" Version="0.0.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
+    <PackageReference Include="Octokit" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
