--- a/src/SourceIndexServer/SourceIndexServer.csproj
+++ b/src/SourceIndexServer/SourceIndexServer.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Microsoft.SourceBrowser.SourceIndexServer</RootNamespace>
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>0a0dcea7-8abe-44df-8d76-efb82363c821</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.0" />
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="GitHubJwt" Version="0.0.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
     <PackageReference Include="Octokit" Version="9.0.0" />
